# Security_alert

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
.sqlx/: query-0f3b268a22c57787bee72630d040341df08f0547a8985ef8e8df1387e88130cc.json  query-13c7f816804995238cf736d86033cc8ff134011ae14e3fe3942ad84075a548cc.json  query-194d766db51a83fe3cc088ecde6a887abfbb53ca269003ec514cb02d1e44ad3f.json  query-1a7e7f3ce3cf06db70a28e51e6dd1f1f3749416282941972077633bc324430bf.json  query-2b5584d785de10605fafd9b202c330176f005739436d33baf14dfe2676204d36.json  query-30c1c85b640e93e69fe1690f6aa66890341ef8a8351bc5ddaf8e32b4b7513c26.json  query-39873a74be26d6bf16bde954eb7f216e71149135446a02bae48e6cf5450f0ce3.json  query-42cc9d7e43eae19101117a3ecc818cb8abc8d41d35c223c6f172d3dbfd0fd6ae.json  query-5c56c0c44d796e196a24193f7e8c825c7afbd5e21fdc7a487c77fbdd8ce6e988.json  query-6511ac3a343c6e67be99eb8e0ff3ca23194fd20bc03b6d39c4690d5a8cf06686.json  query-c4ef68719b2a5293808eb5a69adc9717bfc43068f60a0b967c773f3fe2b53aaa.json  query-d217c7d775a0926c3ccb973f4fb6f517204aaa8dd4a62b888bdbbcb2cbf0fb3b.json  query-f1e62ccebf15c8b635aa14e4b4e65298457d4130b12cb32cd7d32eb76e42f826.json  query-f7759533c9a31a469a1be8ce3210e4d57a1d8d0b925f29a09a5c1665ee0e611d.json
migrations/: 001_initial.sql
src/: main.rs
src/config/: config.rs  database.rs
src/dtos/: mod.rs  user_authentication_dto.rs
src/enums/: role.rs
src/middleware/: jwt_middleware.rs  mod.rs  security_middleware.rs
src/routes/: health.rs  mod.rs  user_authentication_route.rs
src/user_authentication/: mod.rs
src/user_authentication/controllers/: mod.rs  user_authentication_controller.rs
src/utils/: api_response.rs  auth_error.rs  crypto_service.rs  email.rs  mod.rs
(+6 files in other folders)
